# Forensic-Biometrics-Studio

./: .eslintrc.js  .gitignore  .oxlintrc.json  README.adoc  README.md  README_PL.adoc  _tauri_conf_raw_dump.txt  index.html  install.ps1  jest.config.js  lint-staged.config.js  package-lock.json  package.json  pnpm-lock.yaml  start.bat  tsconfig.json  tsconfig.node.json  vite.config.ts
.husky/: commit-msg  pre-commit  prepare-commit-msg
docs/: Forensic_Biometrics_Studio_Use_Impact_Report_Template_v1.docx  developer-guide.md  roadmap.md  user-guide-pl.md  user-guide.md
presets/: english-marking-types-earprint-default.json  english-marking-types-fingerprint-default.json  english-marking-types-shoeprint-default.json  english-marking-types-signature-default.json  marking-types-fingerprint-default.json  marking-types-shoeprint-default.json  polish-marking-types-earprint-default.json  polish-marking-types-fingerprint-default.json  polish-marking-types-shoeprint-default.json  polish-marking-types-signature-default.json
public/: settings.html  splashscreen.html
scripts/: build-pyfing-sidecar.cjs  check-sidecar.ps1  copy-sourceafis-sidecar.ps1  ensure-pyfing-sidecar.cjs  pyfing-requirements.txt  pyfing_enhance.py  sidecar-sync.cjs  tauri-dev.cjs  validate-tauri-config.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/sourceafis_cli_src/: Program.cs  sourceafis_cli_src.csproj
src-tauri/src/: main.rs
src-tauri/tauri-plugin-single-instance/: Cargo.toml  Cargo.toml.orig
(+234 files in other folders)
