[package]
name = "biometrics-studio"
version = "0.6.5"
description = "Application for forensic trace comparison"
authors = ["Cyprian Zdebski", "Konrad Boryś", "Marcel Gańczarczyk"]
license = ""
repository = ""
default-run = "biometrics-studio"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Plugins (SAFE on Windows)
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.2.0"
tauri-plugin-window-state = "2.2.1"
tauri-plugin-store = "2.1.0"
tauri-plugin-os = "2"

# Runtime (pinning is OK)
tauri-runtime = "=2.0.0"
tauri-runtime-wry = "=2.0.0"
tauri-plugin = "=2.0.0"
tauri-build = "=2.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
